--- a/index.html
+++ b/index.html
@@ -18,13 +18,20 @@
     </head>
 
     <body>
+        <header>
+            <h1>This is the homepage for the community story website</h1>
+        </header>
+        <section>
+            <h2>Search Resources</h2>
+            <input type="text" id="searchInput" placeholder="Search for resources..."/>
+            <select id="categorySelect">
+            <option value="all">All Categories</option>
+            <option value="food">Food</option>
+            <option value="education">Education</option>
+            <option value="health">Health</option>
+            </select>
+        </section>
 
-        <h1>This is the homepage for the community story website</h1>
-
-        <ul>
-            <li><a href="highlights.html">Highlights</a></li>
-            <li><a href="index.html">Index</a></li>
-        </ul>
 
     </body>
 
