listado de recursos

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
     </head>
 
     <body>
+
         <header>
             <h1>This is the homepage for the community story website</h1>
         </header>
+
         <section>
             <h2>Search Resources</h2>
             <input type="text" id="searchInput" placeholder="Search for resources..."/>
@@ -31,7 +33,12 @@
             <option value="health">Health</option>
             </select>
         </section>
-
+        
+        <section>
+            <h2>Resource Listings</h2>
+            <div id="resourceList">
+            </div>
+        </section>
 
     </body>
 
