--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <h2>Search Resources</h2>
             <input type="text" id="searchInput" placeholder="Search for resources..."/>
             <select id="categorySelect">
-            <option value="all">All Categories</option>
-            <option value="food">Food</option>
-            <option value="education">Education</option>
-            <option value="health">Health</option>
+            <option value="All">All Categories</option>
+            <option value="Food">Food</option>
+            <option value="Education">Education</option>
+            <option value="Health">Health</option>
             </select>
         </section>
         
