--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <body>
 
         <header>
-            <h1>This is the homepage for the community story website</h1>
+            <h1>York City Community Hub</h1>
         </header>
 
         <section>
