--- a/highlights.html
+++ b/highlights.html
@@ -19,12 +19,20 @@
 
     <body>
 
-        <h1>This is the homepage for the community story website</h1>
+        <nav class="navbar">
 
-        <ul>
-            <li><a href="highlights.html">Highlights</a></li>
-            <li><a href="index.html">Index</a></li>
-        </ul>
+            <div class="websiteName">
+                York City Community Hub
+            </div>
+            
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="highlights.html">Highlights</a></li>
+                <li><a href="history.html">History</a></li>
+                <li><a href="user suggestions.html">User suggestions</a></li>
+            </ul>
+        
+        </nav>
 
     </body>
 
