--- a/highlights.html
+++ b/highlights.html
@@ -15,6 +15,8 @@
         <!--link the webpage's JavaScript file-->
         <script src="script.js" defer></script>
     
+        <link href="https://fonts.cdnfonts.com/css/cairo-play" rel="stylesheet">
+        
     </head>
 
     <body>
