--- a/history.html
+++ b/history.html
@@ -14,6 +14,8 @@
 
         <!--link the webpage's JavaScript file-->
         <script src="script.js" defer></script>
+
+        <link href="https://fonts.cdnfonts.com/css/cairo-play" rel="stylesheet">
     
     </head>
 
