History page and cards

--- a/history.html
+++ b/history.html
@@ -67,6 +67,30 @@
 
         <h2>Firsts of the 1800's</h2>
 
+        <p class="history1">
+            First hall – About 1812 Peter Wilt (owner of The Golden Lamb tavern on East Market Street) built a hall. 
+            It was the first place of public entertainment so far as records go in the town of York.
+        </p>
+
+        <p class="history1">
+            First coal – In 1818, having heard about “stone coal,” Wilt had a half of ton of it unloaded in front of his tavern. “Wilt invited his friends and neighbors into his tavern to see how he would start a fire,” Prowell wrote. 
+            Wilt couldn’t get the coal to burn, and his guests, having taken a dram of spirits which cost three cents a glass, pronounced the cannon stove a failure. That year, George S. Morris was the first coal dealer in York.
+        </p>
+
+        <p class="history1">
+            First telegraph – The first telegraph line extended from Washington to Baltimore in 1844, and the first message sent was about President James Polk’s election. 
+            By 1850 the line reached York, “and in September of that year, the first message was received in the York office,” Prowell wrote in another early Dispatch story. “Ovid Buckley was the first operator. 
+            He had his instrument in a book store opposite the courthouse then owned by himself and Dr. W. S. Poland.”
+        </p>
+
+        <p class="history1">
+            First motor – In 1853 Joel M. Ettinger of York made a small electric motor and exhibited it at the county fair.
+        </p>
+
+        <p class="history1">
+            First telephone – During the fall of 1881, writes Prowell, “John K. Gross, the freight agent of the Northern Central Railway, introduced the telephone into York.” The first line extended from Railroad to Shrewsbury. 
+            Gross brought the Bell Telephone into York City soon after, the first line “form the residence of Latimer Small, North George Street, to the Codorus mills three miles north of York.”
+        </p>
         
     </body>
 
