--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <li><a href="highlights.html">Highlights</a></li>
             <li><a href="history.html">History</a></li>
             <li><a href="user suggestions.html">User suggestions</a></li>
+            <li><a href="reference page.html">Reference page</a></li>
         </ul>
 
     </nav>
