Filtering Bar Style

--- a/reference page.html
+++ b/reference page.html
@@ -36,6 +36,13 @@
 
     </nav>
 
+    <h2>Images Source:</h2>
+    <p>All 3 images are from York Daily Record</p>
+
+    <h2>Font Source:</h2>
+    <p>Website: CDN Fonts</p>
+    <p>Font name: Cairo Play Font Family</p>
+
 </body>
 
 </html>
